# ebpf-image

./: .dockerignore  Cargo.toml  Dockerfile  action.yml  entrypoint.sh  sh-wrapper.sh  start-ci-tracer.sh
.github/workflows/: build-push.yml  ci.yml  release.yml
action/: noop.js  start.js  stop.js
ci-tracer/: Cargo.toml  build.rs
ci-tracer-common/: Cargo.toml
ci-tracer-common/src/: lib.rs
ci-tracer-ebpf/: Cargo.toml
ci-tracer-ebpf/src/: main.rs
ci-tracer/src/: assemble.rs  config.rs  detect.rs  diag.rs  events.rs  hash.rs  lib.rs  main.rs  observe.rs  reconcile.rs  resolve.rs  runrecord.rs  scope.rs  submit.rs
ci-tracer/src/adapter/: github.rs  mod.rs
ci-tracer/tests/: submit_e2e.rs
docs/: recorder-proposal.md
mock-pipeline/: Cargo.toml
mock-pipeline/src/: main.rs
scripts/: e2e.sh
specs/: architecture.md  authentication.md  ci-adapter.md  content-hashing.md  deployment.md  observation.md  run-record.md  security.md  submission.md
xtask/src/: main.rs
