[workspace]
resolver = "2"
members = ["ci-tracer", "ci-tracer-common", "mock-pipeline", "xtask"]
exclude = ["ci-tracer-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Idora-LLC/ebpf-image"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
