[package]
name = "mock-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mock-pipeline"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiny_http = "0.12"
